salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Beneficiary__c</referenceTo>
    <relationshipLabel>Beneficiary</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
</CustomField>