salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>6</scale>
</CustomField>