salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>