salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/MySQL_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>MySQL_Transaction_Id__c</fullName>
    <label>MySQL Transaction ID</label>
    <type>Text</type>
    <length>100</length>
</CustomField>