salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Razorpay_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Razorpay_Order_Id__c</fullName>
    <label>Razorpay Order ID</label>
    <type>Text</type>
    <length>100</length>
</CustomField>