salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Razorpay_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Razorpay_Payment_ID__c</fullName>
    <label>Razorpay Payment ID</label>
    <type>Text</type>
    <length>100</length>
</CustomField>