salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Razorpay_Signature__c.field-meta.xml
<CustomField>
    <fullName>Razorpay_Signature__c</fullName>
    <label>Razorpay Signature</label>
    <type>Text</type>
    <length>255</length>
</CustomField>