salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Source_Amount__c.field-meta.xml
<CustomField>
    <fullName>Source_Amount__c</fullName>
    <label>Source Amount</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>