salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount__c</fullName>
    <label>Target Amount</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>