salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Target_Currency__c.field-meta.xml
<CustomField>
    <fullName>Target_Currency__c</fullName>
    <label>Target Currency</label>
    <type>Text</type>
    <length>10</length>
</CustomField>