salesforce/force-app/main/default/objects/Payment_Transaction__c/listViews/All_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Transactions</fullName>
    <filterScope>Everything</filterScope>
    <label>All Transactions</label>

</ListView>