salesforce/force-app/main/default/objects/Payment_Transaction__c/listViews/Failed_Transactions.listView-meta.xml
<ListView>
    <fullName>Failed_Transactions</fullName>
    <filterScope>Everything</filterScope>
    <label>Failed Transactions</label>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>FAILED</value>
    </filters>

</ListView>