salesforce/force-app/main/default/objects/Payment_Transaction__c/listViews/Successful_Transactions.listView-meta.xml
<ListView>
    <fullName>Successful_Transactions</fullName>
    <filterScope>Everything</filterScope>
    <label>Successful Transactions</label>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>SUCCESS</value>
    </filters>

</ListView>